Modificando el footer

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
 
 <body>
@@ -64,26 +65,17 @@
       <span class="sr-only">Next</span>
     </a>
   </section>
-  <footer class="row">
-    <div class="col-md-12 mt-">
-      <div class="mt-lg-5 mt-md-3 mt-4">
-        <p class="text-center contacto open-sans mr-md-3 mr-lg-0"><i class="far fa-envelope"></i>
-          adriana.torres.lao@gmail.com</p>
-
-      </div>
-    </div>
     <footer class="row">
       <div class="col-md-12 mt-">
         <div class="mt-lg-5 mt-md-3 mt-4">
           <p class="text-center contacto open-sans mr-md-3 mr-lg-0"><i class="far fa-envelope"></i>
             adriana.torres.lao@gmail.com</p>
-
         </div>
       </div>
       <div class="col-md-12">
         <ul class="social-buttons my-3 my-md-3 my-lg-4 mx-auto  " id="anima">
           <li>
-            <a href="../assets/Esvereidy_Torres_CV.pdf" download="EsvereidyTorresCV" class="brandico-cv mr-2"><i class="fas fa-file-download align-middle"></i></a>
+            <a href="Esvereidy_Torres_CV.pdf" download="EsvereidyTorresCV" class="brandico-cv mr-2"><i class="fas fa-file-download align-middle"></i></a>
           </li>
           <li>
             <a href="https://github.com/AdrianaEsvereidyTV" target="_blank" class="brandico-github mx-2"><i class="fab fa-github align-middle"></i></a>
