Modificando los iconos de contacto

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <li class="nav-item active">
           <a class="nav-link" href="#">Sobre mí <span class="sr-only">(current)</span></a>
         </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Contacto <span class="sr-only">(current)</span></a>
+        </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
@@ -65,38 +68,55 @@
       <span class="sr-only">Next</span>
     </a>
   </section>
-    <footer class="row">
-      <div class="col-md-12 mt-">
-        <div class="mt-lg-5 mt-md-3 mt-4">
-          <p class="text-center contacto open-sans mr-md-3 mr-lg-0"><i class="far fa-envelope"></i>
-            adriana.torres.lao@gmail.com</p>
+  <div class="container">
+    <div class="split left">
+      <h1>Contaduría</h1>
+      <a href="#" class="button">Read More</a>
+    </div>
+    <div class="split right">
+      <h1>Programación</h1>
+      <a href="#" class="button">Read More</a>
+    </div>
+  </div>
+
+    <section id="contact">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto text-center">
+            <h2 class="section-heading">Contacto</h2>
+            <hr class="my-4">
+           </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-4 ml-auto text-center">
+            <i class="fas fa-phone fa-3x mb-3 sr-contact-1"></i>
+            <p>(044) 55-4189-1411</p>
+          </div>
+          <div class="col-lg-4 mr-auto text-center">
+            <i class="fas fa-envelope fa-3x mb-3 sr-contact-2"></i>
+            <p>
+              <a href="adriana.torres.lao@gmail.com">adriana.torres.lao@gmail</a>
+            </p>
+          </div>
+          <div class="col-lg-4 mr-auto text-center">
+            <i class="fab fa-github fa-3x mb-3  lign-middle"></i>
+            <p>
+              <a href="https://github.com/AdrianaEsvereidyTV" target="_blank" class="brandico-github mx-2">
+                github.com/AdrianaEsvereidyTV</a>
+            </p>
+          </div>
+          <div class="col-lg-4 mr-auto text-center">
+            <i class="fab fa-linkedin-in fa-3x mb-3 align-middle"></i>
+            <p>
+              <a href="https://www.linkedin.com/in/esvereidy-torres-vera-968940172/" target="_blank" class="brandico-github mx-2">
+                linkedin.com/in/esvereidy-torres-vera</a>
+            </p>
+          </div>
         </div>
       </div>
-      <div class="col-md-12">
-        <ul class="social-buttons my-3 my-md-3 my-lg-4 mx-auto  " id="anima">
-          <li>
-            <a href="Esvereidy_Torres_CV.pdf" download="EsvereidyTorresCV" class="brandico-cv mr-2"><i class="fas fa-file-download align-middle"></i></a>
-          </li>
-          <li>
-            <a href="https://github.com/AdrianaEsvereidyTV" target="_blank" class="brandico-github mx-2"><i class="fab fa-github align-middle"></i></a>
-          </li>
-          <li>
-            <a href="https://www.linkedin.com/in/esvereidy-torres-vera-968940172/" target="_blank" class="brandico-link ml-2">
-              <i class="fab fa-linkedin-in align-middle"></i></a>
-          </li>
-        </ul>
-      </div>
-    </footer>
-    <div class="container">
-      <div class="split left">
-        <h1>Contaduría</h1>
-        <a href="#" class="button">Read More</a>
-      </div>
-      <div class="split right">
-        <h1>Programación</h1>
-        <a href="#" class="button">Read More</a>
-      </div>
-    </div>
+    </section>
+
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
       crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
