Eliminando un enlace sobrante navbar

--- a/index.html
+++ b/index.html
@@ -39,9 +39,6 @@
             <a class="dropdown-item" href="#">Registro de Visitantes</a>
             <a class="dropdown-item" href="#">Red Social</a>
           </div>
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Sobre mí <span class="sr-only">(current)</span></a>
-        </li>
         </li>
       </ul>
     </div>
@@ -95,7 +92,7 @@
           <div class="col-lg-4 mr-auto text-center">
             <i class="fas fa-envelope fa-3x mb-3 sr-contact-2"></i>
             <p>
-              <a href="adriana.torres.lao@gmail.com">adriana.torres.lao@gmail</a>
+              <a href="https://mail.google.com/mail/u/0/#inbox">adriana.torres.lao@gmail</a>
             </p>
           </div>
           <div class="col-lg-4 mr-auto text-center">
