Subiendo cambios en los archivos

--- a/src/index.html
+++ b/src/index.html
@@ -112,8 +112,24 @@
 			</div>
 		</div>
 	</section>
-
-
+  <!-- Sección skills -->
+		<section class="container habilidades" id="skills">
+			<div class="row text-center">
+				<h3 class="titulos naranja">Herramientas</h3>
+			</div>
+			<div class="row">
+				<div class="col-xs-offset-1 col-xs-10">
+					<div class="row">
+						<div class="col-sm-6">
+							<span><img class="mini-icono" src="assets/html5_160.png" alt="icono"><img class="mini-icono" src="assets/css3_160.png" alt="icono"><img class="mini-icono" src="assets/js_160.png" alt="icono"><img class="mini-icono" src="assets/github_160.png" alt="icono"><img class="mini-icono" src="assets/bootstrap_160.png" alt="icono"><img class="mini-icono" src="assets/materialize_160.png" alt="icono"></span>
+							
+						</div>
+					</div>
+				</div>
+			</div>
+			</div>
+			</div>
+		</section>
     <footer id="contact">
       <div class="container">
         <div class="row">
