--- a/src/index.html
+++ b/src/index.html
@@ -68,45 +68,32 @@
 			<div class="col s12 m4">
 				<div class="card">
 					<div class="card-image">
-						<img src="./assets/img/astro5.jpg">
+						<img class="card-img-top" src="./assets/cifrado_.png">
 					</div>
+          <center>
 					<div class="card-content">
-						<p>I am a very simple card. I am good at containing small bits of information.
-						I am convenient because I require little markup to use effectively.</p>
+						<p>Proyecto Cifrado César</p>
 					</div>
+          </center>
 					<div class="card-action center-align">
-						<a href="#" class="btn-small waves-effect waves-light">Demo</a>
-						<a href="#" class="btn-small waves-effect waves-light ">Code</a>
+						<button><a href="https://adrianaesvereidytv.github.io/Proyecto-cifrado-c-sar/src/index.html" class="btn-small waves-effect waves-light"></a>Demo</button>
+						<button><a href="https://github.com/AdrianaEsvereidyTV/Proyecto-cifrado-c-sar" class="btn-small waves-effect waves-light ">Code</a></button>
 					</div>
 				</div>
 			</div>
 			<div class="col s12 m4">
 				<div class="card">
 					<div class="card-image">
-						<img src="./assets/img/astro4.jpg">
+						<img class="card-img-top" src="./assets/easy_.png">
 					</div>
+          <center>
 					<div class="card-content">
-						<p>I am a very simple card. I am good at containing small bits of information.
-						I am convenient because I require little markup to use effectively.</p>
+						<p>Registro de Visitantes -Easy Visit-</p>
 					</div>
+          </center>
 					<div class="card-action center-align">
-						<a href="#" class="btn-small waves-effect waves-light">Demo</a>
-						<a href="#" class="btn-small waves-effect waves-light ">Code</a>
-					</div>
-				</div>
-			</div>
-			<div class="col s12 m4">
-				<div class="card">
-					<div class="card-image">
-						<img src="./assets/img/astro2.jpg">
-					</div>
-					<div class="card-content">
-						<p>I am a very simple card. I am good at containing small bits of information.
-						I am convenient because I require little markup to use effectively.</p>
-					</div>
-					<div class="card-action center-align">
-						<a href="#" class="btn-small waves-effect waves-light">Demo</a>
-						<a href="#" class="btn-small waves-effect waves-light">Code</a>
+						<a href="https://adrianaesvereidytv.github.io/Proyecto-5--Easy-Visit/src/index.html" class="btn-small waves-effect waves-light">Demo</a>
+						<a href="https://github.com/AdrianaEsvereidyTV/Proyecto-5--Easy-Visit" class="btn-small waves-effect waves-light ">Code</a>
 					</div>
 				</div>
 			</div>
@@ -122,7 +109,7 @@
 					<div class="row">
 						<div class="col-sm-6">
 							<span><img class="mini-icono" src="assets/html5_160.png" alt="icono"><img class="mini-icono" src="assets/css3_160.png" alt="icono"><img class="mini-icono" src="assets/js_160.png" alt="icono"><img class="mini-icono" src="assets/github_160.png" alt="icono"><img class="mini-icono" src="assets/bootstrap_160.png" alt="icono"><img class="mini-icono" src="assets/materialize_160.png" alt="icono"></span>
-							
+
 						</div>
 					</div>
 				</div>
