Subiendo cambios en las cards de los proyectos

--- a/src/index.html
+++ b/src/index.html
@@ -74,12 +74,13 @@
 					<div class="card-content">
 						<p>Proyecto Cifrado César</p>
 					</div>
-          </center>
+
 					<div class="card-action center-align">
-						<button><a href="https://adrianaesvereidytv.github.io/Proyecto-cifrado-c-sar/src/index.html" class="btn-small waves-effect waves-light"></a>Demo</button>
-						<button><a href="https://github.com/AdrianaEsvereidyTV/Proyecto-cifrado-c-sar" class="btn-small waves-effect waves-light ">Code</a></button>
+						<button  type="button" class="btn btn-info"><a href="https://adrianaesvereidytv.github.io/Proyecto-cifrado-c-sar/src/index.html" class="btn-small waves-effect waves-light"></a>Demo</button>
+						<button  type="button" class="btn btn-info"><a href="https://github.com/AdrianaEsvereidyTV/Proyecto-cifrado-c-sar" class="btn-small waves-effect waves-light "></a>Code</button>
 					</div>
 				</div>
+        </center>
 			</div>
 			<div class="col s12 m4">
 				<div class="card">
@@ -90,12 +91,13 @@
 					<div class="card-content">
 						<p>Registro de Visitantes -Easy Visit-</p>
 					</div>
-          </center>
+
 					<div class="card-action center-align">
-						<a href="https://adrianaesvereidytv.github.io/Proyecto-5--Easy-Visit/src/index.html" class="btn-small waves-effect waves-light">Demo</a>
-						<a href="https://github.com/AdrianaEsvereidyTV/Proyecto-5--Easy-Visit" class="btn-small waves-effect waves-light ">Code</a>
+						<button  type="button" class="btn btn-info"><a href="https://adrianaesvereidytv.github.io/Proyecto-5--Easy-Visit/src/index.html" class="btn-small waves-effect waves-light"><a>Demo</button>
+						<button  type="button" class="btn btn-info"><a href="https://github.com/AdrianaEsvereidyTV/Proyecto-5--Easy-Visit" class="btn-small waves-effect waves-light "></a>Code</button>
 					</div>
 				</div>
+        </center>
 			</div>
 		</div>
 	</section>
