--- a/src/index.html
+++ b/src/index.html
@@ -103,13 +103,13 @@
 	</section>
   <!-- Sección skills -->
 		<section class="container habilidades" id="skills">
-			<div class="row text-center">
-				<h3 class="titulos naranja">Herramientas</h3>
+			<div class="col-lg-8 mx-auto text-center">
+				<h3 class="section-heading">Herramientas</h3>
 			</div>
 			<div class="row">
-				<div class="col-xs-offset-1 col-xs-10">
+				<div class="col-lg-4 ml-auto text-center">
 					<div class="row">
-						<div class="col-sm-6">
+						<div class="col-lg-4 ml-auto text-center">
 							<span><img class="mini-icono" src="assets/html5_160.png" alt="icono"><img class="mini-icono" src="assets/css3_160.png" alt="icono"><img class="mini-icono" src="assets/js_160.png" alt="icono"><img class="mini-icono" src="assets/github_160.png" alt="icono"><img class="mini-icono" src="assets/bootstrap_160.png" alt="icono"><img class="mini-icono" src="assets/materialize_160.png" alt="icono"></span>
 
 						</div>
