--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-  <link rel="shortcut icon" href="assets/ET_logo.png" type="image/x-icon">
+  <link rel="shortcut icon" href="./src/assets/ET_logo.png" type="image/x-icon">
 </head>
 
 <body>
@@ -45,7 +45,7 @@
 				</center>
         	<div class="row">
 				<div class="col-xs-12 col-s-12 col-sm-5 col-md-5">
-					<img class="img-responsive" src="assets/ET_logo.png" alt="foto">
+					<img class="img-responsive" src="./src/assets/ET_logo.png" alt="foto">
 				</div>
 		<div class="col s12 m12 fondo valign-wrapper">
 			<div class="col s12 m12">
@@ -63,12 +63,12 @@
 	</section>
   <!-- PROYECTOS-->
 	<aside class="container" id="projects">
-		<h2 class="col s12 m12 center-align"> Proyectos</h2>
+		<h2 class="col-lg-8 mx-auto text-center"> Proyectos</h2>
 		<div class="row">
 			<div class="col s12 m4">
 				<div class="card">
 					<div class="card-image">
-						<img class="card-img-top" src="./assets/cifrado_.png">
+						<img class="card-img-top" src="./src/assets/cifrado_.png">
 					</div>
           <center>
 					<div class="card-content">
@@ -85,7 +85,7 @@
 			<div class="col s12 m4">
 				<div class="card">
 					<div class="card-image">
-						<img class="card-img-top" src="./assets/easy_.png">
+						<img class="card-img-top" src="./src/assets/easy_.png">
 					</div>
           <center>
 					<div class="card-content">
@@ -110,7 +110,13 @@
 				<div class="col-lg-4 ml-auto text-center">
 					<div class="row">
 						<div class="col-lg-4 ml-auto text-center">
-							<span><img class="mini-icono" src="assets/html5_160.png" alt="icono"><img class="mini-icono" src="assets/css3_160.png" alt="icono"><img class="mini-icono" src="assets/js_160.png" alt="icono"><img class="mini-icono" src="assets/github_160.png" alt="icono"><img class="mini-icono" src="assets/bootstrap_160.png" alt="icono"><img class="mini-icono" src="assets/materialize_160.png" alt="icono"></span>
+							<span>
+              <img class="mini-icono" src="./src/assets/html5_160.png" alt="icono">
+              <img class="mini-icono" src="./src/assets/css3_160.png" alt="icono">
+              <img class="mini-icono" src="./src/assets/js_160.png" alt="icono">
+              <img class="mini-icono" src="./src/assets/github_160.png" alt="icono">
+              <img class="mini-icono" src="./src/assets/bootstrap_160.png" alt="icono">
+              <img class="mini-icono" src="./src/assets/materialize_160.png" alt="icono"></span>
 
 						</div>
 					</div>
