Subiendo cambios de porta

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <h2 class="text-center titulos blanco">Acerca de mí</h2>
 					<p class="texto blanco">Mi nombre es Adriana Esvereidy Torres Vera, soy Front End Developer y antes de entrar a Laboratoria me desempeñaba en el área contable, decidí dar un giro de 180° a mi vida al descubrir que había un mundo en el cual la imaginación no estaba limitada, donde la creatividad del entorno de la programación da apertura a muchas posibilidades, es un camino que me lleva a despertar y conectar con mi pasión por la música, lo que me permite encontrar inspiración y experimentación.</p>
         <div class="text-center">
-					<a class="black text-center btn btn-default" href="assets/EsvereidyTorresCV.pdf" download="CV-Esvereidy-Torres" role="button">Descarga mi CV</a>
+					<a class="black text-center btn btn-default" href="./src/assets/EsvereidyTorresCV.pdf" download="CV-Esvereidy-Torres" role="button">Descarga mi CV</a>
 				</div>
 		  	</div>
 	 	  </div>
@@ -76,8 +76,8 @@
 					</div>
 
 					<div class="card-action center-align">
-						<button  type="button" class="btn btn-info"><a href="https://adrianaesvereidytv.github.io/Proyecto-cifrado-c-sar/src/index.html" class="btn-small waves-effect waves-light"></a>Demo</button>
-						<button  type="button" class="btn btn-info"><a href="https://github.com/AdrianaEsvereidyTV/Proyecto-cifrado-c-sar" class="btn-small waves-effect waves-light "></a>Code</button>
+						<button  class="btn btn-info"><a href="https://adrianaesvereidytv.github.io/Proyecto-cifrado-c-sar/src/index.html" class="btn-small waves-effect waves-light"></a>Demo</button>
+						<button  class="btn btn-info"><a href="https://github.com/AdrianaEsvereidyTV/Proyecto-cifrado-c-sar" class="btn-small waves-effect waves-light "></a>Code</button>
 					</div>
 				</div>
         </center>
